cambios en nombres y carpetas

--- a/.project.json
+++ b/.project.json
@@ -2,40 +2,22 @@
 	"Onboarding": {
 		"Schema": "sapmobilesvcs",
 		"TimeZone": "UTC",
-		"URL": "sapmobilesvcs://?AppId=dreamsBank&ClientId=b9d55397-23c6-45a3-850b-ccc91d229d4b&ServerUrl=https://27c46edatrial-dev-dreamsbank.cfapps.us10.hana.ondemand.com&SapCloudPlatformEndpoint=https://27c46edatrial-dev-dreamsbank.cfapps.us10.hana.ondemand.com&AuthorizationEndpointUrl=https://27c46edatrial-dev-dreamsbank.cfapps.us10.hana.ondemand.com/oauth2/api/v1/authorize&RedirectUrl=https://27c46edatrial-dev-dreamsbank.cfapps.us10.hana.ondemand.com&TokenUrl=https://27c46edatrial-dev-dreamsbank.cfapps.us10.hana.ondemand.com/oauth2/api/v1/token&multiUser=false"
+		"URL": ""
 	},
 	"CF": {
 		"Target": "https://api.cf.us10.hana.ondemand.com",
 		"Organization": "7ac0ee64-3c8c-4c5b-9051-3a3bbe35c694",
-		"Space": "b5d158a7-c130-49b9-9ebb-0cc94f96d412",
-		"Deploy": {
-			"Destination": [
-				{
-					"CF": "dreamsbankkk",
-					"MDK": "dreamsbankkk",
-					"URL": ""
-				}
-			],
-			"Name": "ns.DreamsBank",
-			"Version": "1.0.0",
-			"AppRouter": "standalone",
-			"WebClient": {
-				"Runtime": "production",
-				"URL": "https://mdk-webclient-runtime.cfapps.us10.hana.ondemand.com/runtime/"
-			}
-		}
+		"Space": "b5d158a7-c130-49b9-9ebb-0cc94f96d412"
 	},
 	"MobileService": {
 		"Type": "standard",
 		"AdminAPI": "https://mobile-service-cockpit-api.cfapps.us10.hana.ondemand.com/cockpit/v1/org/7ac0ee64-3c8c-4c5b-9051-3a3bbe35c694/space/b5d158a7-c130-49b9-9ebb-0cc94f96d412",
 		"AppId": "dreamsBank",
-		"Destination": [
-			"dreamsbankkk"
-		]
+		"Destination": []
 	},
 	"Build": {
-		"SourceMap": false,
+		"SourceMap": true,
 		"TSTarget": "es6",
-		"WMF": false
+		"WMF": true
 	}
 }
